# range-search

./: CMakeLists.txt  README.md  RangeSearch.h  testcase.in  testcase.out
test/: CMakeLists.txt  RangeSearchTest.cpp
